<resources>
    <string name="app_name">Currency Converter</string>
    <string name="rial">Rial</string>
    <string name="us_dollar">US Dollar</string>
    <string name="ca_dollar">Canadian Dollar</string>
    <string name="pound">Pound</string>
    <string name="euro">Euro</string>
    <string name="dirham">Emirates Dirham</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>